output.txt
/home/charles/src/Python/sandbox/theano/gbm/DP_multiprec.cpp:19:29: error: no matching function for call to 'pow'
  cpp_dec_float_100 score = std::pow(std::accumulate(a_.begin()+i, a_.begin()+j, static_cast<cpp_dec_float_100>(0.)), 2) /
                            ^~~~~~~~
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:140:17: note: candidate function not viable: no known conversion from 'boost::multiprecision::number<boost::multiprecision::backends::cpp_dec_float<100, int, void>, boost::multiprecision::et_on>' to 'double' for 1st argument
__MATHCALL_VEC (pow,, (_Mdouble_ __x, _Mdouble_ __y));
                ^
/usr/include/math.h:266:15: note: expanded from macro '__MATHCALL_VEC'
  __MATHCALL (function, suffix, args)
              ^
/usr/include/math.h:273:25: note: expanded from macro '__MATHCALL'
  __MATHDECL (_Mdouble_,function,suffix, args)
                        ^
/usr/include/math.h:275:22: note: expanded from macro '__MATHDECL'
  __MATHDECL_1(type, function,suffix, args); \
                     ^
/usr/include/math.h:283:31: note: expanded from macro '__MATHDECL_1'
  extern type __MATH_PRECNAME(function,suffix) args __THROW
                              ^
/usr/include/math.h:286:42: note: expanded from macro '__MATH_PRECNAME'
#define __MATH_PRECNAME(name,r) __CONCAT(name,r)
                                         ^
/usr/include/x86_64-linux-gnu/sys/cdefs.h:100:23: note: expanded from macro '__CONCAT'
#define __CONCAT(x,y)   x ## y
                        ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/cmath:388:3: note: candidate function not viable: no known conversion from 'boost::multiprecision::number<boost::multiprecision::backends::cpp_dec_float<100, int, void>, boost::multiprecision::et_on>' to 'float' for 1st argument
  pow(float __x, float __y)
  ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/cmath:392:3: note: candidate function not viable: no known conversion from 'boost::multiprecision::number<boost::multiprecision::backends::cpp_dec_float<100, int, void>, boost::multiprecision::et_on>' to 'long double' for 1st argument
  pow(long double __x, long double __y)
  ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/cmath:415:5: note: candidate template ignored: substitution failure [with _Tp = boost::multiprecision::number<boost::multiprecision::backends::cpp_dec_float<100, int, void>, boost::multiprecision::et_on>, _Up = int]: no type named '__type' in '__gnu_cxx::__promote<boost::multiprecision::number<boost::multiprecision::backends::cpp_dec_float<100, int, void>, boost::multiprecision::et_on>, false>'
    pow(_Tp __x, _Up __y)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:989:5: note: candidate template ignored: could not match 'complex' against 'number'
    pow(const complex<_Tp>& __z, int __n)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:998:5: note: candidate template ignored: could not match 'complex' against 'number'
    pow(const complex<_Tp>& __x, const _Tp& __y)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:1032:5: note: candidate template ignored: could not match 'complex' against 'number'
    pow(const complex<_Tp>& __x, const complex<_Tp>& __y)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:1043:5: note: candidate template ignored: could not match 'complex<type-parameter-0-0>' against 'int'
    pow(const _Tp& __x, const complex<_Tp>& __y)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:1864:5: note: candidate template ignored: could not match 'complex' against 'number'
    pow(const std::complex<_Tp>& __x, const _Up& __y)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:1872:5: note: candidate template ignored: could not match 'complex<type-parameter-0-1>' against 'int'
    pow(const _Tp& __x, const std::complex<_Up>& __y)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:1880:5: note: candidate template ignored: could not match 'complex' against 'number'
    pow(const std::complex<_Tp>& __x, const std::complex<_Up>& __y)
    ^
/home/charles/src/Python/sandbox/theano/gbm/DP_multiprec.cpp:19:29: error: no matching function for call to 'pow'
  cpp_dec_float_100 score = std::pow(std::accumulate(a_.begin()+i, a_.begin()+j, static_cast<cpp_dec_float_100>(0.)), 2) /
                            ^~~~~~~~
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:140:17: note: candidate function not viable: no known conversion from 'boost::multiprecision::number<boost::multiprecision::backends::cpp_dec_float<100, int, void>, boost::multiprecision::et_on>' to 'double' for 1st argument
__MATHCALL_VEC (pow,, (_Mdouble_ __x, _Mdouble_ __y));
                ^
/usr/include/math.h:266:15: note: expanded from macro '__MATHCALL_VEC'
  __MATHCALL (function, suffix, args)
              ^
/usr/include/math.h:273:25: note: expanded from macro '__MATHCALL'
  __MATHDECL (_Mdouble_,function,suffix, args)
                        ^
/usr/include/math.h:275:22: note: expanded from macro '__MATHDECL'
  __MATHDECL_1(type, function,suffix, args); \
                     ^
/usr/include/math.h:283:31: note: expanded from macro '__MATHDECL_1'
  extern type __MATH_PRECNAME(function,suffix) args __THROW
                              ^
/usr/include/math.h:286:42: note: expanded from macro '__MATH_PRECNAME'
#define __MATH_PRECNAME(name,r) __CONCAT(name,r)
                                         ^
/usr/include/x86_64-linux-gnu/sys/cdefs.h:100:23: note: expanded from macro '__CONCAT'
#define __CONCAT(x,y)   x ## y
                        ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/cmath:388:3: note: candidate function not viable: no known conversion from 'boost::multiprecision::number<boost::multiprecision::backends::cpp_dec_float<100, int, void>, boost::multiprecision::et_on>' to 'float' for 1st argument
  pow(float __x, float __y)
  ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/cmath:392:3: note: candidate function not viable: no known conversion from 'boost::multiprecision::number<boost::multiprecision::backends::cpp_dec_float<100, int, void>, boost::multiprecision::et_on>' to 'long double' for 1st argument
  pow(long double __x, long double __y)
  ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/cmath:415:5: note: candidate template ignored: substitution failure [with _Tp = boost::multiprecision::number<boost::multiprecision::backends::cpp_dec_float<100, int, void>, boost::multiprecision::et_on>, _Up = int]: no type named '__type' in '__gnu_cxx::__promote<boost::multiprecision::number<boost::multiprecision::backends::cpp_dec_float<100, int, void>, boost::multiprecision::et_on>, false>'
    pow(_Tp __x, _Up __y)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:989:5: note: candidate template ignored: could not match 'complex' against 'number'
    pow(const complex<_Tp>& __z, int __n)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:998:5: note: candidate template ignored: could not match 'complex' against 'number'
    pow(const complex<_Tp>& __x, const _Tp& __y)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:1032:5: note: candidate template ignored: could not match 'complex' against 'number'
    pow(const complex<_Tp>& __x, const complex<_Tp>& __y)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:1043:5: note: candidate template ignored: could not match 'complex<type-parameter-0-0>' against 'int'
    pow(const _Tp& __x, const complex<_Tp>& __y)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:1864:5: note: candidate template ignored: could not match 'complex' against 'number'
    pow(const std::complex<_Tp>& __x, const _Up& __y)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:1872:5: note: candidate template ignored: could not match 'complex<type-parameter-0-1>' against 'int'
    pow(const _Tp& __x, const std::complex<_Up>& __y)
    ^
/usr/lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/complex:1880:5: note: candidate template ignored: could not match 'complex' against 'number'
    pow(const std::complex<_Tp>& __x, const std::complex<_Up>& __y)
    ^
1 error generated.
make[2]: *** [CMakeFiles/DP_multiprec.dir/DP_multiprec.cpp.o] Error 1
make[1]: *** [CMakeFiles/DP_multiprec.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
1 error generated.
make[2]: *** [CMakeFiles/_test_partition_optimizer.dir/DP_multiprec.cpp.o] Error 1
make[1]: *** [CMakeFiles/_test_partition_optimizer.dir/all] Error 2
make: *** [all] Error 2
